--- a/.parcelrc
+++ b/.parcelrc
@@ -1,9 +1,18 @@
-{
+ {
   "extends": [
     "@parcel/config-default"
   ],
   "reporters": [
     "...",
     "parcel-reporter-clean-dist"
-  ]
+  ],
+  "transformers": {
+    "*.hbs": [
+      "parcel-transformer-hbs"
+    ]
+  }
 }
+
+
+
+
