--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://github.com/Volodymyr-Benkovskyy/volodymyr.practic.js/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /volodymyr.practic.js/"
+    "build": "parcel build src/*.html --public-url /volodymyr.practic.js/",
+    "server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -20,14 +21,16 @@
   "dependencies": {
     "axios": "^1.4.0",
     "handlebars": "^4.7.7",
-    "modern-normalize": "^1.1.0"
+    "json-server": "^0.17.3",
+    "modern-normalize": "^1.1.0",
+    "parcel-transformer-hbs": "^1.0.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
     "buffer": "^5.7.1",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "parcel-transformer-hbs": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
